--- a/packages.config
+++ b/packages.config
@@ -5,5 +5,15 @@
   <package id="chromiumembeddedframework.runtime.win-x64" version="124.3.8" targetFramework="net472" />
   <package id="chromiumembeddedframework.runtime.win-x86" version="124.3.8" targetFramework="net472" />
   <package id="Microsoft.Web.WebView2" version="1.0.2478.35" targetFramework="net472" />
+  <package id="Microsoft.Win32.Registry" version="4.7.0" targetFramework="net472" />
+  <package id="NAudio" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Asio" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Core" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Midi" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.Wasapi" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.WinForms" version="2.2.1" targetFramework="net472" />
+  <package id="NAudio.WinMM" version="2.2.1" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="System.Security.AccessControl" version="4.7.0" targetFramework="net472" />
+  <package id="System.Security.Principal.Windows" version="4.7.0" targetFramework="net472" />
 </packages>
